--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
   "bundledDependencies": true,
   "dependencies": {
     "@linkurious/rest-client": "4.1.6",
-    "express": "4.17.3",
-    "superagent": "8.1.2"
+    "express": "4.21.2",
+    "superagent": "10.1.1",
+    "https-proxy-agent": "7.0.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "6.16.0",
